# ccoap

./: CMakeLists.txt  README  README.md  index.html  params.json
apps/examples/: CMakeLists.txt
apps/examples/demo_commandline/: CMakeLists.txt  client_main.c  server_handler.c  server_main.c
apps/examples/demo_time/: CMakeLists.txt  client_main.c  server_handler.c  server_main.c
apps/examples/shared/: server_handler.h  tasks_demo.c  tasks_demo.h
doc/: README  RELEASE  TODOS
doc/doxygen/: Doxyfile
doc/doxygen/html/: ccoaplib_8h.html  ccoaplib_8h_source.html  files.html  globals.html  globals_func.html  globals_vars.html  index.html
doc/doxygen/html/search/: all_63.html  files_63.html  functions_63.html  search.js  variables_63.html
doc/sample_config/: coap_client_config  coap_server_config
include/: ccoaplib.h
lib/: CMakeLists.txt
lib/ccoap/: CMakeLists.txt  client.c  client.h  coap.c  coap.h  debug.c  debug.h  queue.c  queue.h  server.c  server.h
lib/ccoapapps/: CMakeLists.txt
lib/ccoapapps/client_tasks/: tasks.c  tasks.h
lib/ccoapapps/server_handlers/: handlers.c  handlers.h
